# tauri-demo

./: CLAUDE.md  components.d.ts  env.d.ts  index.html  package.json  pnpm-lock.yaml  rust-refactor-plan.md  rust-refactor-summary.md  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: README.md
src/: App.vue  main.ts  router.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  cmd.rs  lib.rs  logread.rs
src-tauri/src/api/: auth.rs  bi_platform.rs  capture.rs  file_match.rs  logging.rs  logread.rs  mod.rs  system.rs  utils.rs  window.rs
src-tauri/src/app/: config.rs  error.rs  logging.rs  mod.rs  setup.rs  state.rs
src-tauri/src/auth/: README.md  config.rs  events.rs  manager.rs  mod.rs  store.rs
src-tauri/src/auth/systems/: mod.rs  registry.rs  system_a.rs  system_b.rs  system_bi.rs  system_c.rs  system_d.rs  system_drs.rs  system_norm.rs  system_test.rs  system_three.rs
src-tauri/src/capture/: capture.rs  mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/auth/: entities.rs  mod.rs
src-tauri/src/domain/capture/: entities.rs  mod.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/network/: mod.rs
src-tauri/src/infrastructure/storage/: mod.rs
src-tauri/src/service/: capture.rs  file_match.rs  logread.rs  mod.rs
src-tauri/src/service/auth/: manager.rs  mod.rs  store.rs
src-tauri/src/service/auth/systems/: mod.rs  registry.rs  system_bi.rs  system_drs.rs
src-tauri/src/utils/: crypto.rs  mod.rs  time.rs  validation.rs
(+37 files in other folders)
