[package]
name = "big-data-rpa-v4"
version = "0.4.0"
description = "数字重庆业务数据巡查自动化系统"
authors = ["you"]
edition = "2021"
repository = "https://github.com/big-data-rpa-v4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-prevent-default = "2.1"
pcap = "2.2.0"
log = "0.4.27"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21.3"
anyhow = "1.0.98"
regex = "1.11.1"
etherparse = "0.18.0"
pktparse = "0.7.1"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
